feat: implement AI and payment functionalities with WebClient configuration, premium access control, and payment processing services